--- a/clock.css
+++ b/clock.css
@@ -176,3 +176,11 @@ i {
     border-radius: 6px;
     
 }
+#bt1{background: none;
+    border: none;
+    
+}
+#bt2{
+    background: none;
+    border: none;
+}
